name:                text-diagram
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/text-diagram#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O3
  build-depends:       base >= 4.7 && < 5,
                       QuickCheck >= 2.10 && < 2.12,
                       universe >= 1.0 && < 1.1,
                       text >= 1.2 && < 1.3,
                       semigroupoids >= 5.2 && < 5.3
