name:                text-diagram
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/text-diagram#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2018 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      src
  exposed-modules:     Text.Graphics.BoxDrawing
                       Text.Graphics.BoxDrawing.Canvas
                       Text.Graphics.BoxDrawing.Symbol
                       Text.Graphics.BoxDrawing.Cardinal
                       Text.Graphics.BoxDrawing.Style
                       Text.Graphics.BoxDrawing.Plus
                       Text.Graphics.BoxDrawing.Coordinate
  default-language:    Haskell2010
  ghc-options:         -O3
                       -Wall
                       -fno-warn-unticked-promoted-constructors
  default-extensions:  OverloadedStrings,
                       PatternSynonyms,
                       DerivingStrategies,
                       GeneralizedNewtypeDeriving,
                       LambdaCase,
                       BangPatterns,
                       StandaloneDeriving,
                       UndecidableInstances,
                       GADTs,
                       RankNTypes,
                       FlexibleInstances,
                       ViewPatterns,
                       ScopedTypeVariables,
                       DataKinds,
                       KindSignatures,
                       NoMonomorphismRestriction,
                       TypeApplications,
                       ImplicitParams,
                       TypeFamilies,
                       MultiParamTypeClasses,
                       FlexibleContexts
  build-depends:       base          >= 4.7 && < 5,
                       universe      >= 1.0 && < 1.1,
                       text          >= 1.2 && < 1.3,
                       array         >= 0.5 && < 0.6,
                       ansi-terminal >= 0.7 && < 0.9,
                       terminal-size >= 0.3 && < 0.4,
                       mtl           >= 2.2 && < 2.3

executable gravity
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  ghc-options:         -O3
                       -Wall
                       -fno-warn-unticked-promoted-constructors
  default-extensions:  OverloadedStrings,
                       PatternSynonyms,
                       DerivingStrategies,
                       GeneralizedNewtypeDeriving,
                       LambdaCase,
                       TupleSections,
                       BangPatterns,
                       StandaloneDeriving,
                       UndecidableInstances,
                       GADTs,
                       RankNTypes,
                       FlexibleInstances,
                       ViewPatterns,
                       ScopedTypeVariables,
                       DataKinds,
                       KindSignatures,
                       NoMonomorphismRestriction,
                       TypeApplications,
                       ImplicitParams,
                       TypeFamilies,
                       MultiParamTypeClasses,
                       FlexibleContexts
  build-depends:       base          >= 4.7 && < 5,
                       text          >= 1.2 && < 1.3,
                       array         >= 0.5 && < 0.6,
                       terminal-size >= 0.3 && < 0.4,
                       mtl           >= 2.2 && < 2.3,
                       text-diagram